Fix: other suffix aligned center (same as prefix)

--- a/assets/survey_themes/fruity_twentythree/forms/forms.scss
+++ b/assets/survey_themes/fruity_twentythree/forms/forms.scss
@@ -48,6 +48,7 @@ $dropdown-font-size: $font-size-sm;
 }
 
 .ls-answers.answers-list .answer-item .othertext-right-label {
+    align-self: center;
     color : $g-700;
 }
 
